# minimal-pybind11-cmake

./: CMakeLists.txt  README.md  setup.py  test.py
.github/workflows/: mac-linux.yml  main.yml  windows.yml
ext/: CMakeLists.txt
ext/log_lib/: log.cpp  log.h
src/: main.cpp
